--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,24 +3,28 @@ services:
   web:
     build: services/frontend
     ports:
-      - "5000:5000"
+      - "3000:3000"
     networks:
       - frontend
       - backend
   reader:
     build: services/reader
     ports:
-      - "8081:8081"
+      - "8080:8080"
     networks:
       - frontend
   writer:
     build: services/writer
     ports:
-      - "8080:8080"
+      - "8081:8081"
     networks:
       - backend
-  reids:
-    image: "redis:alpine"
+  redis:
+    image: "redis:6.2.6-alpine"
+    networks:
+      - frontend
+      - backend
 
 networks:
   backend:
+  frontend:
