--- a/services/writer/Dockerfile
+++ b/services/writer/Dockerfile
@@ -1,6 +1,10 @@
-FROM python:3.9
-WORKDIR /app
-ADD . /app
+FROM python:3.9-slim
 EXPOSE 8081
-CMD ["python"]
-ENTRYPOINT ["main.py"]
+WORKDIR /app
+
+COPY requirements.txt requirements.txt
+RUN pip3 install -r requirements.txt
+
+COPY . .
+
+CMD ["python", "/app/main.py"]
